revisions on ch3

--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -9,7 +9,7 @@
 \item \textbf{Principle 1.} LRPs should be selected based on the best available information. 
 \item \textbf{Principle 2.} LRPs should be consistent with the goal of avoiding serious harm. 
 \item \textbf{Principle 3.} LRPs should be operational, i.e., feasible to calculate and relevant to policy and management.
-\item \textbf{Principle 4.} LRPs should be reliably estimable. 
+\item \textbf{Principle 4.} LRPs should be reliably estimable and plausible. 
 \item \textbf{Principle 5.} When selecting among multiple methods for determining LRPs, the choice should take into account uncertainty. 
 \item \textbf{Principle 6.} Pacific salmon LRPs should be consistent with the goals and objectives of the WSP.
 \item These principles are intended to guide our approach for developing Pacific salmon LRPs while providing flexibility due to differences in local biological characteristics, data qualities and data quantities, among salmon species and stocks. 
@@ -82,9 +82,9 @@ Reliable estimation of limit reference points or stock status metrics can mean a
 "
 -->
 
-**Principle 5**. When selecting among multiple methods for defining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, modelled population dynamics (parameter assumptions and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data, include fewer assumptions, and explicitly account for underlying uncertainties should be preferred"<!-- KH: not clear on the remainder of this sentence, so suggest removing ".., and explicitly account for underlying uncertainties should be preferred". CH. I think a comma after high-qulaity data was missing before which changed the meaning of the sentence. I've kept the last phrase in, with the new comma.-->. 
+**Principle 5**. When selecting among multiple methods for defining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, modelled population dynamics (parameter assumptions and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data, include fewer assumptions, and explicitly account for underlying uncertainties should be preferred<!-- KH: not clear on the remainder of this sentence, so suggest removing ".., and explicitly account for underlying uncertainties should be preferred". CH. I think a comma after high-qulaity data was missing before which changed the meaning of the sentence. I've kept the last phrase in, with the new comma.-->. 
 
-When considering LRPs under alternative model assumptions, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Further, the sensitivity of LRPs to various underlying model assumptions or data quality/quantities can be evaluated in simulation evaluation, where LRPs that are less sensitive to key uncertainties would be preferred.
+When considering LRPs under alternative model assumptions, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are equally plausible. Further, the sensitivity of LRPs to various underlying model assumptions or data qualities and quantities can be evaluated in simulation, where LRPs that are less sensitive to key uncertainties would be preferred.
 
 
 <!--CH: This principle supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
@@ -98,7 +98,7 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 -->
 
 
-**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goal of avoiding serious harm under DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goal of avoiding serious harm under DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication status and serious harm. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
 ## APPLYING THE PRINCIPLES TO LRP DEVELOPMENT
 
