edits on principles

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -17,10 +17,11 @@ LRP methods require assessments of status at the scale of CUs. Abundance data re
 \item The data used to assess the contribution of hatcheries to spawning are associated with high uncertainties related to the tagging method used, sampling rates, uncertainty in survival of natural vs. hatchery-origin fish, and observation errors.
 \item Populations dominated by wild fish but influenced by hatchery strays from outside of the basin are generally included in CU assessments, but these strays may bias estimates of natural production and resulting assessments. 
 \item Following previous WSP status assessments, when data are available, the demographic influence of hatchery production can be removed from time-series of abundances. This step applies to populations included in analyses, after removing populations with high hatchery influence. Where data to differentiate hatchery- from natural-origin spawners are not available, total spawner abundances include hatchery-origin fish, representing a key source of uncertainty for hatchery-influenced populations.
+\item Methods to process data on hatchery contributions within assessments and guidance on best practices within DFO continue to evolve.
 \end{itemize}
 \end{tcolorbox}
 
-Hatcheries contribute to spawning abundances of many salmon populations and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003], do not have biological sampling programs to collect mark and tag data from individual salmon. 
+Hatcheries contribute to spawning abundances of many salmon populations and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003] do not have biological sampling programs to collect, mark and tag data from individual salmon. 
 
 ### Accounting for genetic risks of hatchery production
 
@@ -72,7 +73,7 @@ When assessing population status, @withlerGeneticallyBasedTargets2018 recommend 
 Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. For our case study on Chinook Salmon, <!--KH: coho uses CWTs, so perhaps just leave as WCVI chinook since this is the focus on this paragraph? Or, could add a follow-up sentence about CWT for coho?? CH: will leave for now-->proportions of hatchery-origin spawners were determined from spawning ground surveys for thermal marking on hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery- versus natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors, requiring decisions about temporal averaging. For WCVI Chinook, we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation versus entire time period). 
 
 
-In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives. Enhancement plans are being developed for hatchery-influenced populations by DFO's Salmonid Enhancement Program, which include objectives related to PNI, harvest, assessment, and stewardship and measures to achieve objectives. Once developed, enhancement plans can be integrated with harvest and habitat planning within integrated management and/or rebuilding plans. Guidelines and methods for estimating PNI values are also being documented by DFO's Salmonid Enhancement Program (DFO, In revision)^[DFO In revision. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC]. 
+In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations and documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives. Enhancement plans are being developed for hatchery-influenced populations by DFO's Salmonid Enhancement Program, which include objectives related to PNI, harvest, assessment, and stewardship and measures to achieve objectives. Once developed, enhancement plans can be integrated with harvest and habitat planning within integrated management and/or rebuilding plans. Guidelines and methods for estimating PNI values are also being documented by DFO's Salmonid Enhancement Program (DFO, In revision)^[DFO In revision. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC]. 
 
 ### Wild populations influenced by straying from hatcheries
 
@@ -84,7 +85,7 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that populations domi
 For some WSP assessments that include integrated-transition and integrated-wild populations, the demographic influence of hatchery production is removed from time-series of abundances when data on the proportion of hatchery- versus natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of spawner abundance. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that all natural spawners reproduce successfully in the wild and contribute to natural production. This way, the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the metric of spawner abundances, the contribution of hatchery-origin fish can be removed from spawner time series to reduce the influence of variability in annual hatchery production on status [@dfoWildSalmonPolicy2015]. Although removing hatchery-origin fish from analyses is inconsistent with the recommendation of @withlerGeneticallyBasedTargets2018 to include all spawners in biological assessments when natural spawning predominates (PNI $\geqslant$ 0.5), it is consistent with existing published WSP assessments on which our analyses relied and developing new time-series was beyond the scope of this study.
 
 
-In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5) [e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016], aligned with recommendations of @withlerGeneticallyBasedTargets2018. In these cases, there may a risk of current status being confounded by hatchery production which may mask changes in natural production production and obscure inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments. In general, we recommend flexibility in addressing hatchery-influenced populations in assessments as methods to process hatchery-origin fish and guidance evolve.
+In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5) [e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016], aligned with recommendations of @withlerGeneticallyBasedTargets2018. In these cases, there may a risk of current status being confounded by hatchery production which may mask changes in natural production production and obscure inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments. In general, we recommend flexibility in addressing hatchery-influenced populations in assessments as methods to process hatchery-origin fish and associated guidance evolve.
 
 
 
@@ -111,6 +112,8 @@ To be consistent with the multidimensional approach to WSP status assessments de
 
 <!--KH: if these methods to account for uncertainties haven't been developed yet (i.e., aren't yet written up in a draft paper), I'm not sure we should mention them.   
 CH: the challenge is I had original text saying the Salmon Scanner did not incorporate uncertainties in underlying metrics, but Sue mentioned that its being developed and so it's not really a disadvantage-->
+Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook, Sockeye, and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon populations<!--LW: changed from stocks. Paper uses the word stock but I think they are different than SMUs or CUs (pre-CU and SMU definitions)--> from across the Pacific region to predict reference points for Chinook populations<!--LW: changed from stocks--> without recruitment data. Also, information on freshwater habitat capacity can be used to develop informative priors for stock-recruitment benchmarks estimated with Bayesian techniques (e.g., @atlasLandscapeBiophysicalControls2020 for Sockeye Salmon).
+
 
 \renewcommand*{\arraystretch}{1.4}
 \begin{table}[!htbp]
@@ -138,9 +141,7 @@ CH: the challenge is I had original text saying the Salmon Scanner did not incor
 
 
 
-\normalsize Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook, Sockeye, and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon populations<!--LW: changed from stocks. Paper uses the word stock but I think they are different than SMUs or CUs (pre-CU and SMU definitions)--> from across the Pacific region to predict reference points for Chinook populations<!--LW: changed from stocks--> without recruitment data. Also, information on freshwater habitat capacity can be used to develop informative priors for stock-recruitment benchmarks estimated with Bayesian techniques (e.g., @atlasLandscapeBiophysicalControls2020 for Sockeye Salmon).
-
-Similarly, metrics and benchmarks on long-term and short-term trends in spawner abundances are included in the Salmon Scanner. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks on these metrics represent levels below which there is increased risk of extinction [@holtIndicatorsStatusBenchmarks2009]. <!--CH: I feel like this is repetitive given the table, but Sue asked for a more balanced description of metrics and benchmarks, covering all categories...-->
+\normalsize Similarly, metrics and benchmarks on long-term and short-term trends in spawner abundances are included in the Salmon Scanner. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks on these metrics represent levels below which there is increased risk of extinction [@holtIndicatorsStatusBenchmarks2009]. <!--CH: I feel like this is repetitive given the table, but Sue asked for a more balanced description of metrics and benchmarks, covering all categories...-->
 
 In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; @peacockMetricsSamplingDesigns2012; @dfoIntegratedBiologicalStatus2016], but may not be required for all salmon species and to-date have not been included in the Salmon Scanner. In one example, the distribution of spawners across spawning sites and contractions in that distribution over time were considered in a WSP assessment for southern BC Chinook [@dfoIntegratedBiologicalStatus2016]. In addition, recovery targets for Interior Fraser Coho account for the distribution of spawners among sub-populations  [@ifcrtConservationStrategyCoho2006]. One challenge to applying metrics on distribution is identifying benchmarks that distinguish populations with increased risk of extinction.
 
